--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,106 +1,27 @@
 name: CI
 
 on:
-  push:
-    branches: [ "main", "develop" ]
   pull_request:
-    branches: [ "main", "develop" ]
-
-env:
-  DOTNET_VERSION: '8.0.x'
+  push:
+    branches: [ main ]
 
 jobs:
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - run: dotnet restore
-      - run: dotnet build --no-restore -c Release
-
   lint:
-    name: Lint
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
+
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
+          dotnet-version: '8.0.x'
 
-      - run: dotnet restore
-      - run: dotnet format --verify-no-changes
+      - name: Restore tools
+        run: dotnet tool restore
 
-  unit_tests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
-    needs: build
+      - name: Restore dependencies
+        run: dotnet restore
 
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - run: dotnet restore
-      - run: dotnet test tests/MyApi.UnitTests/MyApi.UnitTests.csproj \
-              --no-build -c Release
-
-  integration_tests:
-    name: Integration Tests
-    runs-on: ubuntu-latest
-    needs: unit_tests
-
-    services:
-      sqlserver:
-        image: mcr.microsoft.com/mssql/server:2022-latest
-        env:
-          SA_PASSWORD: "Your_password123"
-          ACCEPT_EULA: "Y"
-          MSSQL_PID: "Express"
-        ports:
-          - 1433:1433
-        options: >-
-          --health-cmd "(/opt/mssql-tools18/bin/sqlcmd -S localhost -U sa -P Your_password123 -Q 'SELECT 1') || exit 1"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 10
-
-    env:
-      ConnectionStrings__DefaultConnection: "Server=localhost,1433;Database=MyApiDb;User Id=sa;Password=Your_password123;TrustServerCertificate=True"
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - run: dotnet restore
-
-      - name: Run EF migrations
-        run: dotnet ef database update --project src/MyApi
-
-      - name: Run integration tests
-        run: dotnet test tests/MyApi.IntegrationTests/MyApi.IntegrationTests.csproj \
-              --no-build -c Release
-
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: ${{ env.DOTNET_VERSION }}
-
-      - run: dotnet restore
-      - run: dotnet list package --vulnerable
+      - name: Lint (dotnet format)
+        run: dotnet format --verify-no-changes
