--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,25 @@ jobs:
 
       - name: Restore dependencies
         run: dotnet restore
+  tests:
+  runs-on: ubuntu-latest
+  needs: lint
+
+  steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.0.x'
+
+    - name: Restore
+      run: dotnet restore
+
+    - name: Run tests with coverage
+      run: dotnet test --collect:"XPlat Code Coverage"
+
+      
 
       - name: Lint (dotnet format)
         run: dotnet format --verify-no-changes
