Fix escape characters in CI report types

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           reportgenerator \
           -reports:TestResults/**/coverage.cobertura.xml \
           -targetdir:coverage-report \
-          -reporttypes:"HtmlInline_AzurePipelines;Cobertura"
+          -reporttypes:HtmlInline_AzurePipelines\;Cobertura
 "          -reporttypes:HtmlInline_AzurePipelines;Cobertura
 
   
