Enforce code coverage threshold in CI
Add code coverage enforcement step in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,18 @@ jobs:
           reportgenerator \
           -reports:TestResults/**/coverage.cobertura.xml \
           -targetdir:coverage-report \
+          
+      - name: Enforce code coverage
+        run: |
+          reportgenerator \
+            -reports:TestResults/**/coverage.cobertura.xml \
+            -targetdir:coverage-report \
+            -reporttypes:TextSummary \
+            -thresholdtypes:Line \
+            -thresholdstatistic:Total \
+            -thresholds:75
+
+          
           -reporttypes:HtmlInline_AzurePipelines\;Cobertura
 
   
