--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,9 @@ jobs:
       - name: Install ReportGenerator
         run: dotnet tool install --global dotnet-reportgenerator-globaltool
 
+      - name: Update ReportGenerator
+        run: dotnet tool update --global dotnet-reportgenerator-globaltool
+
       - name: Generate coverage report
         run: |
           reportgenerator \
