Specify version for ReportGenerator installation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,8 @@ jobs:
         run: dotnet test --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
       - name: Install ReportGenerator
-        run: dotnet tool install --global dotnet-reportgenerator-globaltool
+        run: |
+          dotnet tool install --global dotnet-reportgenerator-globaltool --version 5.*
 
       - name: Update ReportGenerator
         run: dotnet tool update --global dotnet-reportgenerator-globaltool
