--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,11 +73,10 @@ jobs:
           reportgenerator \
             -reports:TestResults/**/coverage.cobertura.xml \
             -targetdir:coverage-report \
-            -reporttypes:HtmlInline_AzurePipelines\;Cobertura \
+            -reporttypes:HtmlInline_AzurePipelines;Cobertura \
             -assemblyfilters:+MyApi* \
             -classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations* \
-            -filefilters:-**/Program.cs;-**/Migrations/* \
-            -linecoverage:70
+            -filefilters:-**/Program.cs;-**/Migrations/*
 
       - name: Enforce code coverage
         run: |
