--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,12 +71,12 @@ jobs:
       - name: Generate coverage report (clean)
         run: |
           reportgenerator \
-            -reports:TestResults/**/coverage.cobertura.xml \
-            -targetdir:coverage-report \
-            -reporttypes:HtmlInline_AzurePipelines\;Cobertura \
-            -assemblyfilters:+MyApi* \
-            -classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations* \
-            -filefilters:-**/Program.cs;-**/Migrations/*
+          "-reports:TestResults/**/coverage.cobertura.xml" \
+          "-targetdir:coverage-report" \
+          "-reporttypes:HtmlInline_AzurePipelines;Cobertura" \
+          "-assemblyfilters:+MyApi*" \
+          "-classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations*" \
+          "-filefilters:-**/Program.cs;-**/Migrations/*"
 
       - name: Enforce code coverage
         run: |
