--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,17 @@ jobs:
       - name: Restore
         run: dotnet restore
 
-      - name: Run tests with coverage
-        run: dotnet test --collect:"XPlat Code Coverage" --results-directory ./TestResults
+      - name: Run unit tests with coverage
+        run: |
+          dotnet test tests/MyApi.UnitTests \
+          --collect:"XPlat Code Coverage" \
+          --results-directory TestResults/Unit
+
+      - name: Run integration tests with coverage
+        run: |
+          dotnet test tests/MyApi.IntegrationTests \
+          --collect:"XPlat Code Coverage" \
+          --results-directory TestResults/Integration
 
       - name: Install ReportGenerator
         run: |
