--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,32 +60,15 @@ jobs:
       - name: Update ReportGenerator
         run: dotnet tool update --global dotnet-reportgenerator-globaltool
 
-      - name: Generate coverage report
+      - name: Unit test coverage report
         run: |
           reportgenerator \
-          -reports:TestResults/**/coverage.cobertura.xml \
-          -targetdir:coverage-report \
-          -reporttypes:HtmlInline_AzurePipelines\;Cobertura
-
-      - name: Generate coverage report (with threshold)
-        run: |
-          reportgenerator \
-            -reports:TestResults/**/coverage.cobertura.xml \
-            -targetdir:coverage-report \
-            -reporttypes:HtmlInline_AzurePipelines\;Cobertura \
-            -assemblyfilters:+MyApi* \
-            -classfilters:+MyApi* \
-            -linecoverage:60
-
-      - name: Generate coverage report (clean)
-        run: |
-          reportgenerator \
-          "-reports:TestResults/**/coverage.cobertura.xml" \
-          "-targetdir:coverage-report" \
-          "-reporttypes:HtmlInline_AzurePipelines;Cobertura" \
-          "-assemblyfilters:+MyApi*" \
-          "-classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations*" \
-          "-filefilters:-**/Program.cs;-**/Migrations/*"
+            "-reports:TestResults/Unit/**/coverage.cobertura.xml" \
+            "-targetdir:coverage-unit" \
+            "-reporttypes:HtmlInline_AzurePipelines;Cobertura" \
+            "-assemblyfilters:+MyApi*" \
+            "-classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations*" \
+            "-linecoverage:80"
 
       - name: Enforce code coverage
         run: |
