--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,16 +70,13 @@ jobs:
             "-classfilters:+MyApi*;-MyApi.Api.Program;-MyApi.Api.Migrations*" \
             "-linecoverage:80"
 
-      - name: Enforce code coverage
+      - name: Integration test coverage report
         run: |
           reportgenerator \
-            -reports:TestResults/**/coverage.cobertura.xml \
-            -targetdir:coverage-report \
-            -reporttypes:TextSummary \
-            -thresholdtypes:Line \
-            -thresholdstatistic:Total \
-            -thresholds:75 
-
+            "-reports:TestResults/Integration/**/coverage.cobertura.xml" \
+            "-targetdir:coverage-integration" \
+            "-reporttypes:HtmlInline_AzurePipelines"
+ 
       - name: Upload coverage report
         if: always()
         uses: actions/upload-artifact@v4
