--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -7,8 +7,10 @@ on:
     - cron: '0 3 * * 0'
 
 permissions:
-  security-events: write
+  actions: read
   contents: read
+  security-events: write
+
 
 jobs:
   analyze:
