--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,33 +1,23 @@
-name: CodeQL Analysis
+name: CodeQL
 
 on:
   push:
     branches: [ "main" ]
-  schedule:
-    - cron: '0 3 * * 0'
+  pull_request:
+    branches: [ "main" ]
 
 permissions:
   actions: read
   contents: read
   security-events: write
 
-
 jobs:
   analyze:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-
       - uses: github/codeql-action/init@v3
         with:
           languages: csharp
-          queries: security-extended
-
-      - uses: actions/setup-dotnet@v4
-        with:
-          dotnet-version: 8.0.x
-
-      - run: dotnet build --configuration Release
-
+      - run: dotnet build
       - uses: github/codeql-action/analyze@v3
